# img-batch-paster

./: .gitignore  BUGS.md  CLAUDE.md  README.md  build-mac.sh  build_app.spec  config.example.yaml  pyproject.toml
.github/workflows/: deploy-lab.yml
assets/: icon.icns  make_icon.py
deploy/: DEPLOY_KEY_SETUP.md  SETUP.md  com.zealzel.imgbatchpaster.plist  deploy.sh  install.sh  uninstall.sh
docs/: ui-regions.md
src/img_batch_paster/: app_bundle.py  cli.py  config.py  grouper.py  keynote_export.py  mcp_server.py  paste_job.py  pptx_writer.py  xlsx_writer.py
src/img_batch_paster/web/: app.py  template_render.py
src/img_batch_paster/web/static/: index.html
tests/: _colletter.mjs  gen_grids.py  make_doe_a1_1_images.py  make_doe_a1_1_template.py  make_test_images.py  run_tests.sh  test_placement.mjs
tests/fixtures/sample_xlsx/: README.md  grids.json  make_samples.py
tests/fixtures/sample_xlsx/templates/: h1_empty.xlsx  h2_index.xlsx  h3_index_group.xlsx  h4_group.xlsx  h7_group_pivot.xlsx  v1_empty.xlsx  v3_index_group.xlsx  v4_empty.xlsx  v5_index.xlsx  v6_index_group.xlsx  v8_group.xlsx
tests/templates/: report-template.pptx
